@@ -32,6 +32,8 @@ this repository contains the full copyright notices and license terms. -->
                     <button string="Draft" name="draft" icon="tryton-clear"/>
                     <button string="Validate" name="validate_statement"
                         icon="tryton-go-next"/>
+                    <button string="Reconcile" name="reconcile"
+                        icon="tryton-find-replace"/>
                     <button string="Post" name="post" icon="tryton-ok"/>
                 </group>
             </group>
@@ -46,4 +48,5 @@ this repository contains the full copyright notices and license terms. -->
             <field name="company"/>
         </page>
     </notebook>
+    <field name="to_reconcile" colspan="4" invisible="1"/>
 </form>
